--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,45 @@
 {% extends 'base.html' %}
+
+{% block title %}
+About Us - English To Hindi Translator
+{% endblock %}
+
 {% block body %}
+<h1>About Us</h1>
 
-<div class="container my-3">
-    <h2>Made by Vaibhav.</h2>
-    <p></p>
-    <!-- Add more information about your application as needed -->
-</div>
+<p>Welcome to our English To Hindi Translator!</p>
 
+<h2>Our Mission:</h2>
+<p>Our mission is to provide a convenient and efficient tool for translating text from English to Hindi. We aim to assist users in bridging language barriers and facilitating communication across different cultures.</p>
+
+<h2>Creators:</h2>
+<p>Our English To Hindi Translator was created by Vaibhav Sharma, a team passionate about language learning and technology. We are dedicated to developing innovative solutions that make language translation accessible to everyone.</p>
+
+<h2>Features:</h2>
+<ul>
+    <li>Simple and intuitive interface for easy translation.</li>
+    <li>Instant translation from English to Hindi.</li>
+    <li>Translation history to keep track of your translations.</li>
+    <li>Ability to delete translation history entries.</li>
+</ul>
+
+<h2>Contact Us:</h2>
+<p>Have questions or feedback? We'd love to hear from you! Feel free to reach out to us at [your email address] or connect with us on social media:</p>
+<ul>
+    <li><a href="https://twitter.com/">Twitter</a></li>
+    <li><a href="https://www.facebook.com/">Facebook</a></li>
+    <li><a href="https://www.instagram.com/">Instagram</a></li>
+</ul>
+
+<h2>Acknowledgements:</h2>
+<p>We would like to express our gratitude to the following resources and contributors:</p>
+<ul>
+    <li><a href="https://cloud.google.com/translate">Google Translate API</a></li>
+    <li><a href="https://flask.palletsprojects.com/">Flask</a></li>
+    <li><a href="https://getbootstrap.com/">Bootstrap</a></li>
+    <li><a href="https://fontawesome.com/">Font Awesome</a></li>
+    <li><a href="https://unsplash.com/">Unsplash</a> for providing the background image used in our website.</li>
+</ul>
+
+<p>Thank you for using our English To Hindi Translator!</p>
 {% endblock body %}
