--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,8 @@
     {% block body %}
     
     {% endblock body %}
+    <!-- Main JavaScript file -->
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 
 </html>
