--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- NavBar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">English To Hindi Translator</a>
