--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,8 @@ About Us - English To Hindi Translator
 
 <h2>Welcome to our English To Hindi Translator!</h2>
 
-<h5>Made By Vaibhav</h4>
+<h5>Team Members:</h4>
+<p>Vaibhav Sharma (Leader) <br> Harsh Kaushik <br> Yashika Pachori <br> Anjali <br> Aditya Bhatnagar <br> Jiya Singh</p>
 
 <h5>Thank you for using our English To Hindi Translator!</h5>
 {% endblock body %}
