--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,28 +10,30 @@ body {
     font-size: 14px; /* Adjust the font size as needed */
 }
 
-/* Navbar */
-.navbar {
-    background: linear-gradient(135deg, #f0f0f0, #c0c0c0); /* Use linear gradient for the background */
-    border-bottom: 1px solid #ccc;
-    padding: 10px 20px; /* Restore previous padding */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a shadow for a modern look */
-}
-
-.navbar-brand {
-    color: #333; /* Change text color to a darker shade */
-    font-size: 1.5rem;
-}
-
-.navbar-nav .nav-link {
-    color: #333; /* Change text color to a darker shade */
-    font-weight: bold;
-    transition: color 0.3s;
-}
-
-.navbar-nav .nav-link:hover {
-    color: #555; /* Change hover color to a slightly darker shade */
-}
+/* NavBar */
+.navbar{
+    font-size: 16px;
+    top: 0;
+    left: 0;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+    /* (NavBar Items) */
+  .navbar-light .navbar-nav .nav-link,
+  .navbar-light .navbar-nav .nav-link i {
+    padding: 0 20px;    /* spacing between navbar item */
+    color: black;
+    transition: 0.3s ease;
+    font-weight: 500;
+  }
+  
+        /* Hover Effect of complete NavBar Execpt Mobile [down] */
+  .navbar-light .navbar-nav .nav-link:hover,
+  .navbar i:hover,
+  .navbar-light .navbar-nav .nav-link.active,
+  .navbar i.active{
+    color:lightblue;
+  }
 
 
 /* Form */
@@ -57,6 +59,7 @@ body {
     padding: 0.75rem;
     vertical-align: top;
     border: none; /* Remove border from table cells */
+    font-size:15px;
 }
 
 .table th {
