--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,20 @@
 <div class="container my-3 ">
     
     <form action="/" method="POST">
-        <div class="mb-3">
-            <label for="eng" class="form-label">English</label>
+        <div class="my-5 pt-4">
+            <h3>English</h3>
             <input type="text" class="form-control" name="eng" id="eng" aria-describedby="emailHelp" required> 
         </div>
-        <div class="mb-3">
-            <label for="hin" class="form-label">Hindi</label>
+        <div class="my-2">
+            <h3>Hindi</h3>
             <input type="text" class="form-control" name="hin" id="hin" value="{{ hin_translation }}" readonly>
         </div>
-        <button type="submit" class="btn btn-dark">Translate</button>
+        <button type="submit" class="btn btn-dark my-3 py-2 px-3">Translate</button>
     </form>
+</div>
+
+<div class="container">
+    <hr class="bg-dark">
 </div>
 
 <div class="container my-3">
