--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <!-- NavBar-->
     
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 fixed-top">  <!-- py-size fixed top -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-bluechill py-2">  <!-- py-size fixed top -->
         <div class="container">
             <!-- NavBar Icon-->
           <h3>English To Hindi Translator</h3>
