--- a/templates/about.html
+++ b/templates/about.html
@@ -5,12 +5,16 @@ About Us - English To Hindi Translator
 {% endblock %}
 
 {% block body %}
+
+<div class="container pt-3 mt-5">
 <h1>About Us</h1>
 
 <h2>Welcome to our English To Hindi Translator!</h2>
 
-<h5>Team Members:</h4>
-<p>Vaibhav Sharma (Leader) <br> Harsh Kaushik <br> Yashika Pachori <br> Anjali <br> Aditya Bhatnagar <br> Jiya Singh</p>
+<h4>Team Members:</h4>
+<h6>Vaibhav Sharma (Leader) <br> Harsh Kaushik <br> Yashika Pachori <br> Anjali <br> Aditya Bhatnagar <br> Jiya Singh</h6>
 
 <h5>Thank you for using our English To Hindi Translator!</h5>
+
+</div>
 {% endblock body %}
