--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ body {
     background-size: cover;
     background-position: center;
     font-size: 14px; /* Adjust the font size as needed */
-    font-style: italic;
+    font-style: normal;
 }
 
 /* NavBar */
